# steam_farm

./: .gitignore  Dockerfile.server  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.venv-frida/: pyvenv.cfg
ai-bot/: .gitignore  README.md  config.py  main.py  requirements.txt  run.py  torch_check_gpu.py
ai-bot/aiming/: __init__.py  fov_mouse.py  recoil.py  target_selector.py
ai-bot/detectors/: __init__.py  base.py  yolov8.py
ai-bot/grabbers/: obs_vc_grabber.py
ai-bot/tools/: calibrate_x360.py
cmd/desktop/: farm_controller.go  input_relay.go  log_capture.go  main.go  sigscan_log_sink.go  vnc_proxy.go  yolo_log_sink.go
cmd/server/: main.go
config/: cs2_memory.example.json
config/cs2_dumper/: README.md
config/mapnav/: de_ancient.json  de_anubis.json  de_cache.json  de_dust2.json  de_inferno.json  de_mirage.json  de_nuke.json  de_overpass.json  de_train.json  de_vertigo.json
docker/: Dockerfile.cs2  Dockerfile.dota2
docker/scripts/: entrypoint.sh  gen-machine-id.sh
internal/common/: config.go  crypto.go
internal/database/: postgres.go
internal/engine/: bot.go  manager.go
sandbox-core/: Cargo.toml
sandbox-core/scripts/: patch_steam_cloud.py  steam_shadow_setup.sh
sandbox-core/src/: ipc.rs  main.rs  monitor.rs  proc_kill.rs  process.rs  sandbox.rs  steam.rs  steam_cloud_vdf.rs
scripts/so/: PIPELINE.md  export_rva_xlsx.py  fetch_rva_probe_all.sh  find_libclient_globals.py  frida_rva_table_probe.py  frida_rva_watch.py
so/: libclient_globals_candidates.json  libclient_offsets.example.json  libclient_readelf_dynamic.txt  libclient_readelf_sections.txt  rva.xlsx  rva1.xlsx  rva2.xlsx  rva_table.json
tools/: xinput_relay.c
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+120 files in other folders)
