[package]
name = "sfarm-sandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sfarm-sandbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal", "process"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
