[package]
name = "sfarm-sandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sfarm-sandbox"
path = "src/main.rs"

[dependencies]
# 4.5+ тянет clap_lex с edition2024 — нужен Rust ≥1.85; 4.4.x собирается на Rust 1.75+
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal", "process"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
