[package]
name = "sfarm-sandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sfarm-sandbox"
path = "src/main.rs"

[dependencies]
# Сборка на Rust 1.75 (старые дистрибутивы): не тянуть crates с edition2024 (clap 4.5+, getrandom 0.4.2+, uuid 1.9+ …).
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "=1.40.0", features = ["full"] }
nix = { version = "0.29", features = ["signal", "process"] }
# uuid 1.23 тянет getrandom 0.4 (edition2024); 1.8.x — getrandom 0.2
uuid = { version = "=1.8.0", features = ["v4"] }
getrandom = { version = "0.2.17" }
libc = "0.2"
